--- a/src/components/MobileViewToggle/MobileViewToggle.css
+++ b/src/components/MobileViewToggle/MobileViewToggle.css
@@ -12,3 +12,9 @@
     display: flex;
   }
 }
+
+@media print {
+  .mobile-tabs {
+    display: none !important;
+  }
+}
